v0.8.1 - Pending
	+ Add list of image names to custom actions (%L)

v0.8 - September 4, 2006
	+ Editing capabilities: resize, crop, save, delete, rename
	+ Pref to preload images for faster navigation (enabled by default)
	+ Implemented 'custom actions' framework, including batch actions
	+ --onload or -o argument for performing actions on image loading
	+ Added File > Properties to display image properties
	+ Show "Scanning..." in statusbar when scanning for images; Escape to abort
	+ Reduce GTK+ requirement to 2.6.0
	+ Bug: Opening with 'load all images in dir' gives expected result
	+ Bug: Cannot open folder while search process is active
	+ Added French translation (Mike Massonnet)
	+ Added Polish translation (Tomasz Dominikowski)
	+ Added Russian translation (mavka)

v0.7.3 - August 2, 2006
	+ Fix crash when loading images in certain circumstances

v0.7.2 - August 1, 2006
	+ Preference to automatically start the slideshow in fullscreen mode
	+ Background image search process to load image faster
	+ Added cli argument: -s or --slideshow to start in slideshow mode
	+ Added cli argument: -f or --fullscreen to start in fullscreen mode
	+ Additional shortcuts: +/- for zooming in/out
	+ Fixed .desktop mimetypes
	+ Added German translation (Bjoern Martensen)
	+ Added Spanish translation (Isidro Arribas)

v0.7.1 - July 9, 2006
	+ Toolbar style follows gnome preference (optional gnome-python dependency)
	+ Skip hidden files/dirs when loading images
	+ Bug: Caps-lock breaks some shortcuts
	+ Bug fixes

v0.7 - June 20, 2006
	+ Slideshow mode (delay time, randomize order, disable screensaver preferences)
	+ Display animated images
	+ Edit > Open in Editor
	+ Image wrapping options: yes/no/prompt
	+ Cleaned up menubar, preferences
	+ Set go navigation items' sensitivities based on context
	+ Bug: 1:1 images are sometimes incorrectly set to fit
	+ Many bugfixes, interface tweaks

v0.6 - May 29, 2006
	+ In fullscreen mode, hide mouse cursor after 2 seconds of no movement